parser.output
Terminals which are not used

   MK_DOT
   ERROR


State 201 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list
    2        | /* empty */

    3 global_decl_list: global_decl_list global_decl
    4                 | global_decl

    5 global_decl: decl_list function_decl
    6            | function_decl

    7 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | VOID ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | type ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

   11 param_list: param_list MK_COMMA param
   12           | param

   13 param: type ID
   14      | type ID dim_fn

   15 dim_fn: MK_LB expr_null MK_RB dimfn1

   16 dimfn1: MK_LB expr MK_RB dimfn1
   17       | /* empty */

   18 expr_null: expr
   19          | /* empty */

   20 block: decl_list stmt_list
   21      | stmt_list
   22      | decl_list
   23      | /* empty */

   24 decl_list: decl_list decl
   25          | decl

   26 decl: type_decl
   27     | var_decl

   28 type_decl: TYPEDEF type id_list MK_SEMICOLON
   29          | TYPEDEF VOID id_list MK_SEMICOLON

   30 var_decl: type init_id_list MK_SEMICOLON
   31         | ID id_list MK_SEMICOLON

   32 type: INT
   33     | FLOAT

   34 id_list: ID
   35        | id_list MK_COMMA ID
   36        | id_list MK_COMMA ID dim_decl
   37        | ID dim_decl

   38 dim_decl: MK_LB cexpr MK_RB
   39         | dim_decl MK_LB cexpr MK_RB

   40 cexpr: cexpr OP_PLUS mcexpr
   41      | cexpr OP_MINUS mcexpr
   42      | mcexpr

   43 mcexpr: mcexpr OP_TIMES cfactor
   44       | mcexpr OP_DIVIDE cfactor
   45       | cfactor

   46 cfactor: CONST
   47        | MK_LPAREN cexpr MK_RPAREN

   48 init_id_list: init_id
   49             | init_id_list MK_COMMA init_id

   50 init_id: ID
   51        | ID dim_decl
   52        | ID OP_ASSIGN relop_expr

   53 stmt_list: stmt_list stmt
   54          | stmt

   55 stmt: MK_LBRACE block MK_RBRACE
   56     | WHILE MK_LPAREN test MK_RPAREN stmt
   57     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   58     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   59     | IF MK_LPAREN test MK_RPAREN stmt
   60     | IF MK_LPAREN test MK_RPAREN stmt ELSE stmt
   61     | ID MK_LPAREN relop_expr_list MK_RPAREN MK_SEMICOLON
   62     | MK_SEMICOLON
   63     | RETURN MK_SEMICOLON
   64     | RETURN relop_expr MK_SEMICOLON

   65 assign_expr_list: nonempty_assign_expr_list
   66                 | /* empty */

   67 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   68                          | assign_expr

   69 test: assign_expr

   70 assign_expr: ID OP_ASSIGN relop_expr
   71            | relop_expr

   72 relop_expr: relop_term
   73           | relop_expr OP_OR relop_term

   74 relop_term: relop_factor
   75           | relop_term OP_AND relop_factor

   76 relop_factor: expr
   77             | expr rel_op expr

   78 rel_op: OP_EQ
   79       | OP_GE
   80       | OP_LE
   81       | OP_NE
   82       | OP_GT
   83       | OP_LT

   84 relop_expr_list: nonempty_relop_expr_list
   85                | /* empty */

   86 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
   87                         | relop_expr

   88 expr: expr add_op term
   89     | term

   90 add_op: OP_PLUS
   91       | OP_MINUS

   92 term: term mul_op factor
   93     | factor

   94 mul_op: OP_TIMES
   95       | OP_DIVIDE

   96 factor: MK_LPAREN relop_expr MK_RPAREN
   97       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
   98       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
   99       | CONST
  100       | OP_MINUS CONST
  101       | OP_NOT CONST
  102       | ID MK_LPAREN relop_expr_list MK_RPAREN
  103       | OP_MINUS ID MK_LPAREN relop_expr_list MK_RPAREN
  104       | OP_NOT ID MK_LPAREN relop_expr_list MK_RPAREN
  105       | var_ref
  106       | OP_MINUS var_ref
  107       | OP_NOT var_ref

  108 var_ref: ID
  109        | var_ref dim

  110 dim: MK_LB expr MK_RB


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 7 8 9 10 13 14 31 34 35 36 37 50 51 52 61 70 102 103 104 108
CONST (259) 46 99 100 101
VOID (260) 8 10 29
INT (261) 32
FLOAT (262) 33
IF (263) 59 60
ELSE (264) 60
WHILE (265) 56
FOR (266) 57
TYPEDEF (267) 28 29
OP_ASSIGN (268) 52 58 70
OP_OR (269) 73
OP_AND (270) 75
OP_NOT (271) 98 101 104 107
OP_EQ (272) 78
OP_NE (273) 81
OP_GT (274) 82
OP_LT (275) 83
OP_GE (276) 79
OP_LE (277) 80
OP_PLUS (278) 40 90
OP_MINUS (279) 41 91 97 100 103 106
OP_TIMES (280) 43 94
OP_DIVIDE (281) 44 95
MK_LB (282) 15 16 38 39 110
MK_RB (283) 15 16 38 39 110
MK_LPAREN (284) 7 8 9 10 47 56 57 59 60 61 96 97 98 102 103 104
MK_RPAREN (285) 7 8 9 10 47 56 57 59 60 61 96 97 98 102 103 104
MK_LBRACE (286) 7 8 9 10 55
MK_RBRACE (287) 7 8 9 10 55
MK_COMMA (288) 11 35 36 49 67 86
MK_SEMICOLON (289) 28 29 30 31 57 58 61 62 63 64
MK_DOT (290)
ERROR (291)
RETURN (292) 63 64


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 1 2, on right: 0
global_decl_list (40)
    on left: 3 4, on right: 1 3
global_decl (41)
    on left: 5 6, on right: 3 4
function_decl (42)
    on left: 7 8 9 10, on right: 5 6
param_list (43)
    on left: 11 12, on right: 7 8 11
param (44)
    on left: 13 14, on right: 11 12
dim_fn (45)
    on left: 15, on right: 14
dimfn1 (46)
    on left: 16 17, on right: 15 16
expr_null (47)
    on left: 18 19, on right: 15
block (48)
    on left: 20 21 22 23, on right: 7 8 9 10 55
decl_list (49)
    on left: 24 25, on right: 5 20 22 24
decl (50)
    on left: 26 27, on right: 24 25
type_decl (51)
    on left: 28 29, on right: 26
var_decl (52)
    on left: 30 31, on right: 27
type (53)
    on left: 32 33, on right: 7 9 13 14 28 30
id_list (54)
    on left: 34 35 36 37, on right: 28 29 31 35 36
dim_decl (55)
    on left: 38 39, on right: 36 37 39 51
cexpr (56)
    on left: 40 41 42, on right: 38 39 40 41 47
mcexpr (57)
    on left: 43 44 45, on right: 40 41 42 43 44
cfactor (58)
    on left: 46 47, on right: 43 44 45
init_id_list (59)
    on left: 48 49, on right: 30 49
init_id (60)
    on left: 50 51 52, on right: 48 49
stmt_list (61)
    on left: 53 54, on right: 20 21 53
stmt (62)
    on left: 55 56 57 58 59 60 61 62 63 64, on right: 53 54 56 57 59
    60
assign_expr_list (63)
    on left: 65 66, on right: 57
nonempty_assign_expr_list (64)
    on left: 67 68, on right: 65 67
test (65)
    on left: 69, on right: 56 59 60
assign_expr (66)
    on left: 70 71, on right: 67 68 69
relop_expr (67)
    on left: 72 73, on right: 52 58 64 70 71 73 86 87 96 97 98
relop_term (68)
    on left: 74 75, on right: 72 73 75
relop_factor (69)
    on left: 76 77, on right: 74 75
rel_op (70)
    on left: 78 79 80 81 82 83, on right: 77
relop_expr_list (71)
    on left: 84 85, on right: 57 61 102 103 104
nonempty_relop_expr_list (72)
    on left: 86 87, on right: 84 86
expr (73)
    on left: 88 89, on right: 16 18 76 77 88 110
add_op (74)
    on left: 90 91, on right: 88
term (75)
    on left: 92 93, on right: 88 89 92
mul_op (76)
    on left: 94 95, on right: 92
factor (77)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107,
    on right: 92 93
var_ref (78)
    on left: 108 109, on right: 58 105 106 107 109
dim (79)
    on left: 110, on right: 109


state 0

    0 $accept: . program $end

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 2 (program)

    program           go to state 6
    global_decl_list  go to state 7
    global_decl       go to state 8
    function_decl     go to state 9
    decl_list         go to state 10
    decl              go to state 11
    type_decl         go to state 12
    var_decl          go to state 13
    type              go to state 14


state 1

   31 var_decl: ID . id_list MK_SEMICOLON

    ID  shift, and go to state 15

    id_list  go to state 16


state 2

    8 function_decl: VOID . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    ID  shift, and go to state 17


state 3

   32 type: INT .

    $default  reduce using rule 32 (type)


state 4

   33 type: FLOAT .

    $default  reduce using rule 33 (type)


state 5

   28 type_decl: TYPEDEF . type id_list MK_SEMICOLON
   29          | TYPEDEF . VOID id_list MK_SEMICOLON

    VOID   shift, and go to state 18
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4

    type  go to state 19


state 6

    0 $accept: program . $end

    $end  shift, and go to state 20


state 7

    1 program: global_decl_list .
    3 global_decl_list: global_decl_list . global_decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 1 (program)

    global_decl    go to state 21
    function_decl  go to state 9
    decl_list      go to state 10
    decl           go to state 11
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


state 8

    4 global_decl_list: global_decl .

    $default  reduce using rule 4 (global_decl_list)


state 9

    6 global_decl: function_decl .

    $default  reduce using rule 6 (global_decl)


state 10

    5 global_decl: decl_list . function_decl
   24 decl_list: decl_list . decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    function_decl  go to state 22
    decl           go to state 23
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


state 11

   25 decl_list: decl .

    $default  reduce using rule 25 (decl_list)


state 12

   26 decl: type_decl .

    $default  reduce using rule 26 (decl)


state 13

   27 decl: var_decl .

    $default  reduce using rule 27 (decl)


state 14

    7 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | type . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   30 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 24

    init_id_list  go to state 25
    init_id       go to state 26


state 15

   34 id_list: ID .
   37        | ID . dim_decl

    MK_LB  shift, and go to state 27

    $default  reduce using rule 34 (id_list)

    dim_decl  go to state 28


state 16

   31 var_decl: ID id_list . MK_SEMICOLON
   35 id_list: id_list . MK_COMMA ID
   36        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 29
    MK_SEMICOLON  shift, and go to state 30


state 17

    8 function_decl: VOID ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    MK_LPAREN  shift, and go to state 31


state 18

   29 type_decl: TYPEDEF VOID . id_list MK_SEMICOLON

    ID  shift, and go to state 15

    id_list  go to state 32


state 19

   28 type_decl: TYPEDEF type . id_list MK_SEMICOLON

    ID  shift, and go to state 15

    id_list  go to state 33


state 20

    0 $accept: program $end .

    $default  accept


state 21

    3 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 3 (global_decl_list)


state 22

    5 global_decl: decl_list function_decl .

    $default  reduce using rule 5 (global_decl)


state 23

   24 decl_list: decl_list decl .

    $default  reduce using rule 24 (decl_list)


state 24
